; Note: We disable warning 18 here to support compiler versions < 4.03
; See https://caml.inria.fr/mantis/view.php?id=7135 for details

(env
 (dev
  (flags
   (:standard -g -w -18-53)))
 (release
  (flags
   (:standard -g -w -18-53))))

; Note: We exclude any other directory from the default alias, to avoid building
; docs targets when running `dune build` in the root directory.

(alias
 (name default)
 (deps
  (alias_rec src/default)))

(rule
 (alias bench)
 (action
  (progn
   (bash "diff doc/driver.mld doc/driver.mld.corrected >&2 || true")
   (cat doc/driver-benchmarks.json))))

(vendored_dirs sherlodoc)
