(lang dune 3.7)

(name odoc)

(documentation "https://ocaml.org/p/odoc")

(using menhir 2.1)

(source
 (github ocaml/odoc))

(license ISC)

(authors
 "Anton Bachin <antonbachin@yahoo.com>"
 "Daniel Bünzli <daniel.buenzli@erratique.ch>"
 "David Sheets <sheets@alum.mit.edu>"
 "Jon Ludlam <jon@recoil.org>"
 "Jules Aguillon <juloo.dsi@gmail.com>"
 "Leo White <leo@lpw25.net>"
 "Lubega Simon <lubegasimon73@gmail.com>"
 "Paul-Elliot Anglès d'Auriac <paul-elliot@tarides.com>"
 "Thomas Refis <trefis@janestreet.com>")

(maintainers
 "Daniel Bünzli <daniel.buenzli@erratique.ch>"
 "Jon Ludlam <jon@recoil.org>"
 "Jules Aguillon <juloo.dsi@gmail.com>"
 "Paul-Elliot Anglès d'Auriac <paul-elliot@tarides.com>")

(cram enable)

(using mdx 0.3)
