opam-version: "2.0"

version: "dev"
homepage: "https://github.com/ocaml/odoc"
doc: "https://ocaml.github.io/odoc/"
bug-reports: "https://github.com/ocaml/odoc/issues"
license: "ISC"

maintainer: [
  "Daniel Bünzli <daniel.buenzli@erratique.ch>"
  "Jon Ludlam <jon@recoil.org>"
  "Jules Aguillon <juloo.dsi@gmail.com>"
  "Paul-Elliot Anglès d'Auriac <paul-elliot@tarides.com>"
]
authors: [
  "Anton Bachin <antonbachin@yahoo.com>"
  "Daniel Bünzli <daniel.buenzli@erratique.ch>"
  "David Sheets <sheets@alum.mit.edu>"
  "Jon Ludlam <jon@recoil.org>"
  "Jules Aguillon <juloo.dsi@gmail.com>"
  "Leo White <leo@lpw25.net>"
  "Lubega Simon <lubegasimon73@gmail.com>"
  "Paul-Elliot Anglès d'Auriac <paul-elliot@tarides.com>"
  "Thomas Refis <trefis@janestreet.com>"
]
dev-repo: "git+https://github.com/ocaml/odoc.git"

synopsis: "Meta package defining dependencies for the benchmark rule. Not released."

depends: [
  "astring"
  "cmdliner" {>= "1.0.0"}
  "cppo" {build & >= "1.1.0"}
  "dune" {>= "3.7.0"}
  "fpath"
  "ocaml" {>= "4.02.0"}
  "result"
  "tyxml" {>= "4.3.0"}
  "fmt"
  "ocamlfind"
  "bos"
  "yojson" {>= "1.6.0"}
  "mdx" {>= "2.3.0"}
]
