opam-version: "2.0"

version: "dev"
homepage: "https://github.com/ocaml/odoc"
doc: "https://ocaml.github.io/odoc/"
bug-reports: "https://github.com/ocaml/odoc/issues"
license: "ISC"

maintainer: [
  "Daniel Bünzli <daniel.buenzli@erratique.ch>"
  "Jon Ludlam <jon@recoil.org>"
  "Jules Aguillon <juloo.dsi@gmail.com>"
  "Paul-Elliot Anglès d'Auriac <paul-elliot@tarides.com>"
]
authors: [
  "Anton Bachin <antonbachin@yahoo.com>"
  "Daniel Bünzli <daniel.buenzli@erratique.ch>"
  "David Sheets <sheets@alum.mit.edu>"
  "Jon Ludlam <jon@recoil.org>"
  "Jules Aguillon <juloo.dsi@gmail.com>"
  "Leo White <leo@lpw25.net>"
  "Lubega Simon <lubegasimon73@gmail.com>"
  "Paul-Elliot Anglès d'Auriac <paul-elliot@tarides.com>"
  "Thomas Refis <trefis@janestreet.com>"
]
dev-repo: "git+https://github.com/ocaml/odoc.git"

synopsis: "OCaml Documentation Generator - Driver"
description: """
The driver is a sample implementation of a tool to drive odoc to generate
documentation for installed packages.
"""


depends: [
  "ocaml" {>= "5.1.0"}
  "odoc" {= version}
  "bos"
  "fpath"
  "yojson"
  "ocamlfind"
  "opam-format"
  "logs"
  "eio_main"
  "progress"
  "cmdliner"
  "sherlodoc"
]

build: [
  ["dune" "subst"] {dev}
  [
    "dune"
    "build"
    "-p"
    name
    "-j"
    jobs
    "@install"
    "@runtest" {with-test}
    "@doc" {with-doc}
  ]
]
pin-depends: [
  [ "sherlodoc.dev" "git+https://github.com/art-w/sherlodoc#0357233acf56936db6760cba573f7e77750b5428"]
]