opam-version: "2.0"

version: "dev"
homepage: "https://github.com/ocaml/odoc"
doc: "https://ocaml.github.io/odoc/"
bug-reports: "https://github.com/ocaml/odoc/issues"
license: "ISC"

maintainer: [
  "Jon Ludlam <jon@recoil.org>"
  "Jules Aguillon <juloo.dsi@gmail.com>"
  "Paul-Elliot Anglès d'Auriac <paul-elliot@tarides.com>"
]
authors: [
  "Daniel Bünzli <daniel.buenzli@erratique.ch>"
  "Paul-Elliot Anglès d'Auriac <paul-elliot@tarides.com>"
  "Jon Ludlam <jon@recoil.org>"
]
dev-repo: "git+https://github.com/ocaml/odoc.git"

synopsis: "OCaml Documentation Generator - Markdown support"
description: """
Odoc-md is part of the odoc suite of tools for generating documentation for OCaml packages.

This package provides support for generating documentation from Markdown files.
"""

depends: [
  "ocaml" {>= "4.14.0"}
  "odoc" {= version}
  "dune" {>= "3.21.0"}
  "cmdliner" {>= "1.3.0"}
  "cmarkit"
]

build: [
  ["dune" "subst"] {dev}
  [
    "dune"
    "build"
    "-p"
    name
    "-j"
    jobs
    "@install"
    "@doc" {with-doc}
  ]
]

x-maintenance-intent: ["(latest)"]

