opam-version: "2.0"
version: "dev"
synopsis: "Parser for ocaml documentation comments"
description: """
Odoc_parser is a library for parsing the contents of OCaml documentation
comments, formatted using 'odoc' syntax, an extension of the language
understood by ocamldoc."""
maintainer: ["Jon Ludlam <jon@recoil.org>"]
authors: ["Anton Bachin <antonbachin@yahoo.com>"]
license: "ISC"
homepage: "https://github.com/ocaml-doc/odoc-parser"
bug-reports: "https://github.com/ocaml/odoc/issues"
dev-repo: "git+https://github.com/ocaml/odoc.git"
doc: "https://ocaml-doc.github.io/odoc-parser/"
depends: [
  "dune" {>= "3.7.0"}
  "ocaml" {>= "4.02.0"}
  "astring"
  "result"
  "camlp-streams"
  "ppx_expect" {with-test}
  ("ocaml" {< "4.04.1" & with-test} | "sexplib0" {with-test})
]
build: [
  ["dune" "subst"] {dev}
  [
    "dune"
    "build"
    "-p"
    name
    "-j"
    jobs
    "@install"
  ]
]

