opam-version: "2.0"
version: "dev"
synopsis: "Parser for ocaml documentation comments"
description: """
Odoc_parser is a library for parsing the contents of OCaml documentation
comments, formatted using 'odoc' syntax, an extension of the language
understood by ocamldoc."""
maintainer: ["Jon Ludlam <jon@recoil.org>"]
authors: ["Anton Bachin <antonbachin@yahoo.com>"]
license: "ISC"
homepage: "https://github.com/ocaml/odoc"
bug-reports: "https://github.com/ocaml/odoc/issues"
dev-repo: "git+https://github.com/ocaml/odoc.git"
doc: "https://ocaml.github.io/odoc/odoc_parser"
depends: [
  "dune" {>= "3.7"}
  "ocaml" {>= "4.02.0" & < "5.4"}
  "astring"
  "result" {>= "1.5"}
  "camlp-streams"
  "ppx_expect" {with-test}
  ("ocaml" {< "4.04.1" & with-test} | "sexplib0" {with-test})
  # Dependencies for sherlodoc:
  "base64" {>= "3.5.1"}
  "bigstringaf" {>= "0.9.1"}
  "js_of_ocaml" {>= "5.6.0"}
  "brr" {>= "0.0.6"}
  "cmdliner" {>= "1.2.0"}
  "decompress" {>= "1.5.3"}
  "fpath" {>= "0.7.3"}
  "lwt" {>= "5.7.0"}
  "menhir" {>= "20230608"}
  "ppx_blob" {>= "0.7.2"}
  "tyxml" {>= "4.6.0"}
]
build: [
  ["dune" "subst"] {dev}
  [
    "dune"
    "build"
    "-p"
    name
    "-j"
    jobs
    "@install"
    # Tests are not all associated with a package and would be run if using the
    # default '@runtest'.
    "@src/parser/runtest" {with-test}
  ]
]
