opam-version: "2.0"
version: "dev"
synopsis: "Parser for ocaml documentation comments"
description: """
Odoc_parser is a library for parsing the contents of OCaml documentation
comments, formatted using 'odoc' syntax, an extension of the language
understood by ocamldoc."""
maintainer: ["Jon Ludlam <jon@recoil.org>"]
authors: ["Anton Bachin <antonbachin@yahoo.com>"]
license: "ISC"
homepage: "https://github.com/ocaml/odoc"
bug-reports: "https://github.com/ocaml/odoc/issues"
dev-repo: "git+https://github.com/ocaml/odoc.git"
doc: "https://ocaml.github.io/odoc/odoc_parser"
depends: [
  "dune" {>= "3.21"}
  "ocaml" {>= "4.08.0" & < "5.5"}
  "astring"
  "camlp-streams"
  "ppx_expect" {with-test}
  "sexplib0" {with-test}
]
build: [
  ["dune" "subst"] {dev}
  [
    "dune"
    "build"
    "-p"
    name
    "-j"
    jobs
    "@install"
    # Tests are not all associated with a package and would be run if using the
    # default '@runtest'.
    "@src/parser/runtest" {with-test}
  ]
]
x-maintenance-intent: ["(latest)"]

