opam-version: "1.2"

version: "1.3.0"
homepage: "http://github.com/ocaml-doc/odoc"
doc: "https://github.com/ocaml/odoc#readme"
bug-reports: "https://github.com/ocaml-doc/odoc/issues"
license: "ISC"

authors: [
  "Thomas Refis <trefis@janestreet.com>"
  "David Sheets <sheets@alum.mit.edu>"
  "Leo White <leo@lpw25.net>"
]
maintainer: "Anton Bachin <antonbachin@yahoo.com>"
dev-repo: "http://github.com/ocaml-doc/odoc.git"

available: [ocaml-version >= "4.02.0"]
depends: [
  "astring" {build}
  "bos" {build}
  "cmdliner" {build}
  "cppo" {build}
  "dune" {build}
  "fpath" {build}
  "result" {build}
  "tyxml" {build & >= "4.0.0"}
]

build: [
  ["dune" "subst"] {pinned}
  ["dune" "build" "-p" name "-j" jobs]
]
