opam-version: "2.0"

version: "dev"
homepage: "http://github.com/ocaml-doc/odoc"
doc: "https://github.com/ocaml/odoc#readme"
bug-reports: "https://github.com/ocaml-doc/odoc/issues"
license: "ISC"

authors: [
  "Thomas Refis <trefis@janestreet.com>"
  "David Sheets <sheets@alum.mit.edu>"
  "Leo White <leo@lpw25.net>"
]
maintainer: "Anton Bachin <antonbachin@yahoo.com>"
dev-repo: "git+https://github.com/ocaml-doc/odoc.git"

synopsis: "OCaml documentation generator"

depends: [
  "astring" {build}
  "bos" {build}
  "cmdliner" {build}
  "cppo" {build}
  "dune" {build}
  "fpath" {build}
  "ocaml" {>= "4.02.0"}
  "result" {build}
  "rresult" {build & >= "0.3.0"}
  "tyxml" {build & >= "4.0.0"}

  "alcotest" {dev & >= "0.8.3"}
  "bisect_ppx"  {dev & >= "1.3.0"}
  "markup" {dev & >= "0.8.0"}
  "ocamlfind" {dev}
  "sexplib" {dev & >= "113.33.00"}
]

build: [
  ["dune" "subst"] {pinned}
  ["dune" "build" "-p" name "-j" jobs]
]
