opam-version: "2.0"

version: "dev"
homepage: "http://github.com/ocaml/odoc"
doc: "https://ocaml.github.io/odoc/"
bug-reports: "https://github.com/ocaml/odoc/issues"
license: "ISC"

authors: [
  "Thomas Refis <trefis@janestreet.com>"
  "David Sheets <sheets@alum.mit.edu>"
  "Leo White <leo@lpw25.net>"
  "Anton Bachin <antonbachin@yahoo.com>"
  "Jon Ludlam <jon@recoil.org>"
]
maintainer: "Anton Bachin <antonbachin@yahoo.com>"
dev-repo: "git+https://github.com/ocaml/odoc.git"

synopsis: "OCaml documentation generator"
description: """
Odoc is a documentation generator for OCaml. It reads doc comments,
delimited with `(** ... *)`, and outputs HTML. 
"""

depends: [
  "odoc-parser"
  "astring"
  "cmdliner"
  "cppo" {build}
  "dune" {>= "2.8.0"}
  "fpath"
  "ocaml" {>= "4.02.0"}
  "result"
  "tyxml" {>= "4.3.0"}
  "fmt"
  "logs"
  "re" {>= "1.7.2"}

  "ocaml-migrate-parsetree" {>= "1.0.6"}

  "ocaml-version" {with-test & >= "2.3.0"}
  "lwt" {with-test}
  "alcotest" {with-test & >= "0.8.3"}
  "markup" {with-test & >= "1.0.0"}
  "ocamlfind" {with-test}
  "yojson" {with-test}
  ("ocaml" {< "4.04.1" & with-test} | "sexplib0" {with-test})
  "conf-jq" {with-test}

  "bisect_ppx" {with-test & = "2.5.0"}
  "ppx_expect" {with-test}
]

build: [
  ["dune" "subst"] {pinned}
  [
    "dune"
    "build"
    "-p"
    name
    "-j"
    jobs
    "@install"
    "@runtest" {with-test}
    "@doc" {with-doc}
  ]
]
