opam-version: "2.0"
version: "dev"
synopsis: "Search engine for OCaml documentation"
maintainer: ["art.wendling@gmail.com"]
authors: ["Arthur Wendling" "Emile Trotignon"]
license: "MIT"
homepage: "https://github.com/ocaml/odoc"
doc: "https://ocaml.github.io/odoc/"
bug-reports: "https://github.com/ocaml/odoc/issues"
flags: [ avoid-version ]
depends: [
  "dune" {>= "3.7"}
  "ocaml" {>= "4.0.8"}
  "odoc" {= version}
  "base64" {>= "3.5.1"}
  "bigstringaf" {>= "0.9.1"}
  "js_of_ocaml" {>= "5.6.0"}
  "brr" {>= "0.0.6"}
  "cmdliner" {>= "1.3.0"}
  "decompress" {>= "1.5.3"}
  "fpath" {>= "0.7.3"}
  "lwt" {>= "5.7.0"}
  "menhir" {>= "20230608"}
  "ppx_blob" {>= "0.9.0"}
  "tyxml" {>= "4.6.0"}
  "result" {>= "1.5"}
  "odig" {with-test}
  "base" {with-test & = "v0.16.3"}
  "alcotest" {with-test}
]
depopts: [
  "ancient" {>= "0.9.1"}
]
build: [
  ["dune" "subst"] {dev}
  [
    "dune"
    "build"
    "-p"
    name
    "-j"
    jobs
    "@install"
    "@sherlodoc/runtest" {with-test}
    "@doc" {with-doc}
  ]
]
dev-repo: "git+https://github.com/ocaml/odoc.git"
x-maintenance-intent: ["(latest)"]
