(ocamllex unescape)

(executable
 (name main)
 (public_name sherlodoc)
 (package sherlodoc)
 (libraries
  cmdliner
  index
  query
  db_store
  (select
   serve.ml
   from
   (www -> serve.available.ml)
   (!www -> serve.unavailable.ml)))
 (preprocess
  (pps ppx_blob))
 (preprocessor_deps ../jsoo/sherlodoc.js))
