; `sherlodoc_index` is an executable that build a database for sherlodoc taking
; odocl files as input.

(executable
 (public_name sherlodoc_index)
 (name index)
 (package sherlodoc)
 (libraries
  db
  fpath
  tyxml
  opam-core
  odoc.search
  odoc.loader
  odoc.model
  odoc.xref2
  odoc.odoc
  cmdliner
  ; storage_ancient
  storage_marshal
  storage_js))
