; `sherlodoc_index` is an executable that build a database for sherlodoc taking
; odocl files as input.

(executable
 (public_name sherlodoc_index)
 (name index)
 (package sherlodoc)
 (libraries
  (select
   ancient.ml
   from
   (storage_ancient -> ancient.available.ml)
   (!storage_ancient -> ancient.unavailable.ml))
  db
  fpath
  tyxml
  odoc.search
  odoc.model
  odoc.odoc
  cmdliner
  storage_marshal
  storage_js))
