; This directory contains modules for storing search databases. The
; datastructure itself is the same each time, but the serialisation format is
; different.

(library
 (name storage_ancient)
 (modules storage_ancient)
 (optional)
 (libraries db ancient))

(library
 (name storage_js)
 (modules storage_js)
 (libraries db base64 bigstringaf decompress.zl))

(library
 (name storage_marshal)
 (modules storage_marshal)
 (libraries db))
