(rule
 (targets compat.ml)
 (deps
  (:x compat.cppo.ml))
 (action
  (chdir
   %{workspace_root}
   (run %{bin:cppo} -V OCAML:%{ocaml_version} %{x} -o %{targets}))))

(library
 (name odoc_document)
 (public_name odoc.document)
 (instrumentation
  (backend bisect_ppx))
 (instrumentation
  (backend landmarks --auto))
 (libraries
  odoc_model
  fpath
  astring
  syntax_highlighter
  odoc_utils
  odoc_index))
