(executable
 (public_name odoc_driver)
 (package odoc-driver)
 (link_deps
  (package odoc)
  (package odoc-md)
  %{bin:sherlodoc})
 (preprocess
  (pps ppx_sexp_conv))
 (libraries
  cmdliner
  bos
  progress
  fpath
  yojson
  findlib
  opam-format
  logs
  logs.fmt
  eio_main
  sexplib
  odoc_utils))
