; Support files for the generated HTML. See the LICENSE file for the licences
; of the vendored projects.

(rule
 (alias runtest)
 (enabled_if
  (> %{ocaml_version} 4.08))
 (deps
  (:x odoc_html_support_files.ml)
  (glob_files *.js)
  (glob_files *.css)
  (glob_files_rec *.woff2))
 (action
  (progn
   (setenv
    SOURCE_DATE_EPOCH
    0
    (run ocaml-crunch . -e js -e css -e woff2 -o %{x}.corrected -m plain -s))
   (diff? %{x} %{x}.corrected))))

(library
 (name odoc_html_support_files)
 (public_name odoc.html_support_files)
 (wrapped false))
