(rule
 (targets ident_env.ml)
 (deps
  (:x ident_env.cppo.ml))
 (action
  (chdir
   %{workspace_root}
   (run %{bin:cppo} -V OCAML:%{ocaml_version} %{x} -o %{targets}))))

(rule
 (targets ident_env.mli)
 (deps
  (:x ident_env.cppo.mli))
 (action
  (chdir
   %{workspace_root}
   (run %{bin:cppo} -V OCAML:%{ocaml_version} %{x} -o %{targets}))))

(library
 (name odoc_loader)
 (public_name odoc.loader)
 (preprocess
  (action
   (run %{bin:cppo} -V OCAML:%{ocaml_version} %{input-file})))
 (libraries odoc_model odoc-parser syntax_highlighter odoc_document))
