(rule
 (targets compat.ml)
 (deps
  (:x compat.cppo.ml))
 (enabled_if
  (not %{ocaml-config:ox}))
 (action
  (chdir
   %{workspace_root}
   (run %{bin:cppo} -V OCAML:%{ocaml_version} %{x} -o %{targets}))))

(rule
 (targets compat.ml)
 (deps
  (:x compat.cppo.ml))
 (enabled_if %{ocaml-config:ox})
 (action
  (chdir
   %{workspace_root}
   (run %{bin:cppo} -V OCAML:%{ocaml_version} -D "OXCAML" %{x} -o %{targets}))))

(library
 (name odoc_model)
 (public_name odoc.model)
 (flags
  (:standard -w -50))
 (instrumentation
  (backend landmarks --auto))
 (instrumentation
  (backend bisect_ppx))
 (libraries compiler-libs.common odoc-parser odoc_utils))
