(* -*- tuareg -*- *)

let preprocess =
  match Sys.getenv "BISECT_ENABLE" with
  | "yes" -> "(preprocess (pps bisect_ppx))"
  | _ -> ""
  | exception Not_found -> ""

let () =
  Jbuild_plugin.V1.send @@
    {|
(library
 (name odoc_model_desc)
 (public_name odoc.model_desc)
 (libraries odoc_model)
  |} ^ preprocess ^ {|)
|}
