(library
 (name odoc_odoc)
 (public_name odoc.odoc)
 (libraries
  compiler-libs.common
  fpath
  odoc_html
  odoc_html_support_files
  odoc_latex
  odoc_loader
  odoc_manpage
  odoc_model
  odoc_json_index
  odoc_xref2
  tyxml
  unix)
 (instrumentation
  (backend landmarks --auto))
 (instrumentation
  (backend bisect_ppx)))

(documentation
 (package odoc))
