(* -*- tuareg -*- *)

let preprocess =
  match Sys.getenv "BISECT_ENABLE" with
  | "yes" -> "(preprocess (pps bisect_ppx))"
  | _ -> ""
  | exception Not_found -> ""

let () =
  Jbuild_plugin.V1.send @@
    {|
(ocamllex lexer)

(library
 (name odoc__parser)
 (public_name odoc.parser)
    |} ^ preprocess ^ {|
 (libraries astring odoc__alias odoc__compat odoc__model)
 (flags (:standard -open Odoc__alias)))
    |}
