(ocamllex lexer)

(menhir
 (modules parser)
 (flags --table --inspection --dump))

(library
 (name odoc_parser)
 (public_name odoc-parser)
 (instrumentation
  (backend landmarks --auto))
 (instrumentation
  (backend bisect_ppx))
 (flags
  (:standard -w -50))
 (libraries astring result camlp-streams menhirLib))
