(library
 (name odoc_html_frontend)
 (public_name odoc.search_html_frontend)
 (libraries tyxml odoc_utils)
 (modules odoc_html_frontend))

(library
 (name odoc_search)
 (public_name odoc.search)
 (libraries
  odoc_html
  odoc_model
  odoc_html_frontend
  tyxml
  odoc_utils
  odoc_index)
 (modules :standard \ odoc_html_frontend))
