(* -*- tuareg -*- *)

let preprocess =
  match Sys.getenv "BISECT_ENABLE" with
  | "yes" -> "(preprocess (pps bisect_ppx))"
  | _ -> ""
  | exception Not_found -> ""

let () =
  Jbuild_plugin.V1.send @@
    {|
(library
 (name odoc__xref)
 (public_name odoc.xref)
    |} ^ preprocess ^ {|
 (libraries compiler-libs.common odoc__alias odoc__model)
 (flags (:standard -open Odoc__alias)))
    |}
